--- a/src/frontend/package.json
+++ b/src/frontend/package.json
@@ -68,6 +68,7 @@
     "stylus-loader": "^3.0.1",
     "uglifyjs-webpack-plugin": "^1.1.1",
     "url-loader": "^0.5.8",
+    "vue-cli-plugin-apollo": "^0.19.2",
     "vue-cli-plugin-vuetify": "^0.5.0",
     "vue-jest": "^1.0.2",
     "vue-loader": "^13.3.0",
