--- a/src/frontend/package.json
+++ b/src/frontend/package.json
@@ -15,6 +15,7 @@
   "dependencies": {
     "@babel/polyfill": "^7.0.0-rc.1",
     "@mdi/font": "^2.6.95",
+    "@vue/cli-shared-utils": "^3.5.1",
     "axios": "^0.18.0",
     "material-design-icons-iconfont": "^3.0.3",
     "roboto-fontface": "*",
