--- a/src/frontend/package.json
+++ b/src/frontend/package.json
@@ -16,10 +16,18 @@
     "@babel/polyfill": "^7.0.0-rc.1",
     "@mdi/font": "^2.6.95",
     "@vue/cli-shared-utils": "^3.5.1",
+    "apollo-boost": "^0.3.1",
+    "apollo-cache-inmemory": "^1.5.1",
+    "apollo-client": "^2.5.1",
+    "apollo-link": "^1.2.11",
+    "apollo-link-http": "^1.5.14",
     "axios": "^0.18.0",
+    "graphql": "^14.2.1",
+    "graphql-tag": "^2.10.1",
     "material-design-icons-iconfont": "^3.0.3",
     "roboto-fontface": "*",
     "vue": "^2.5.2",
+    "vue-apollo": "^3.0.0-beta.28",
     "vue-router": "^3.0.1",
     "vuetify": "^1.5.8"
   },
