--- a/src/frontend/package.json
+++ b/src/frontend/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "apollo-cache-inmemory": "1.5.1",
     "apollo-client": "2.5.1",
+    "apollo-link-context": "^1.0.17",
     "apollo-link-http": "1.5.14",
     "graphql": "0.13.2",
     "graphql-tag": "2.10.1",
