--- a/src/frontend/package.json
+++ b/src/frontend/package.json
@@ -1,68 +1,50 @@
 {
-  "name": "vue-apollo-instagram-example",
-  "version": "0.0.1",
-  "description": ":camera: Instagram clone built with Vue 2 & Apollo Client",
+  "name": "frontend",
+  "version": "0.1.0",
   "private": true,
   "scripts": {
-    "dev": "webpack-dev-server --inline --progress --config build/webpack.dev.conf.js",
-    "start": "npm run dev",
-    "build": "node build/build.js"
+    "serve": "vue-cli-service serve",
+    "build": "vue-cli-service build",
+    "lint": "vue-cli-service lint"
   },
   "dependencies": {
     "apollo-boost": "^0.3.1",
-    "apollo-cache-inmemory": "1.5.1",
-    "apollo-client": "2.5.1",
-    "apollo-link-http": "1.5.14",
-    "graphql": "0.13.2",
-    "graphql-tag": "2.10.1",
-    "vue": "2.6.10",
-    "vue-apollo": "3.0.0-beta.28",
-    "vue-router": "3.0.2",
-    "vue-template-compiler": "2.6.10"
+    "apollo-cache-inmemory": "^1.5.1",
+    "apollo-client": "^2.5.1",
+    "apollo-link-http": "^1.5.14",
+    "core-js": "^2.6.5",
+    "graphql": "^14.2.1",
+    "graphql-tag": "^2.10.1",
+    "vue": "^2.6.6",
+    "vue-apollo": "^3.0.0-beta.28"
   },
   "devDependencies": {
-    "autoprefixer": "8.6.5",
-    "babel-core": "6.26.3",
-    "babel-helper-vue-jsx-merge-props": "2.0.3",
-    "babel-loader": "7.1.5",
-    "babel-plugin-syntax-jsx": "6.18.0",
-    "babel-plugin-transform-runtime": "6.23.0",
-    "babel-plugin-transform-vue-jsx": "3.7.0",
-    "babel-preset-env": "1.7.0",
-    "babel-preset-stage-2": "6.24.1",
-    "chalk": "2.4.2",
-    "copy-webpack-plugin": "4.6.0",
-    "css-loader": "0.28.11",
-    "eslint": "4.19.1",
-    "eslint-plugin-vue": "4.7.1",
-    "extract-text-webpack-plugin": "3.0.2",
-    "file-loader": "1.1.11",
-    "friendly-errors-webpack-plugin": "1.7.0",
-    "html-webpack-plugin": "2.30.1",
-    "node-notifier": "5.4.0",
-    "optimize-css-assets-webpack-plugin": "4.0.3",
-    "ora": "2.1.0",
-    "portfinder": "1.0.20",
-    "postcss-import": "11.1.0",
-    "postcss-loader": "2.1.6",
-    "postcss-url": "7.3.2",
-    "rimraf": "2.6.3",
-    "semver": "5.6.0",
-    "shelljs": "0.8.3",
-    "tachyons": "4.11.1",
-    "uglifyjs-webpack-plugin": "1.3.0",
-    "url-loader": "0.6.2",
-    "vue-loader": "14.2.4",
-    "vue-style-loader": "4.1.2",
-    "webpack": "3.12.0",
-    "webpack-bundle-analyzer": "2.13.1",
-    "webpack-dev-server": "2.11.4",
-    "webpack-merge": "4.2.1"
+    "@vue/cli-plugin-babel": "^3.5.0",
+    "@vue/cli-plugin-eslint": "^3.5.0",
+    "@vue/cli-service": "^3.5.0",
+    "babel-eslint": "^10.0.1",
+    "eslint": "^5.8.0",
+    "eslint-plugin-vue": "^5.0.0",
+    "vue-template-compiler": "^2.5.21"
   },
-  "engines": {
-    "node": ">= 6.0.0",
-    "npm": ">= 3.0.0",
-    "yarn": "YARN NO LONGER USED - use npm instead."
+  "eslintConfig": {
+    "root": true,
+    "env": {
+      "node": true
+    },
+    "extends": [
+      "plugin:vue/essential",
+      "eslint:recommended"
+    ],
+    "rules": {},
+    "parserOptions": {
+      "parser": "babel-eslint"
+    }
+  },
+  "postcss": {
+    "plugins": {
+      "autoprefixer": {}
+    }
   },
   "browserslist": [
     "> 1%",
