--- a/Pipfile
+++ b/Pipfile
@@ -13,6 +13,7 @@ django-filter = "*"
 django-graphql-jwt = "*"
 graphene = "*"
 django-cors-headers = "*"
+whitenoise = "*"
 
 [requires]
 python_version = "3.7"
